--- a/css/nav.css
+++ b/css/nav.css
@@ -1,42 +1,76 @@
 body {
-    padding: 0;
     margin: 0;
-    background-color: white;
-    font-family: Arial, sans-serif;
+    padding: 0;
 }
 
 .navbar {
-    background-color: gray;
-    width: 100%;
-    height: 80px;
-}
-
-ul {
-    font-family: Arial, sans-serif;
     display: flex;
-    gap: 72px;
+    justify-content: space-between;
+    /* align-items: center; */  
+    padding: 20px;
+    background-color: gray;
+    transition: background-color 0.3s ease-in-out;
 }
 
-ul li {
-    list-style: none;
+.logo img {
+    width: 50px;
+    height: auto;
+    animation: rotateLogo 5s infinite linear;
 }
 
-ul li a {
-    font-size: 18px;
-    font-weight: 700;
+@keyframes rotateLogo {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.navbar-menu {
+    list-style-type: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar-menu li {
+    margin-right: 35px;
+    transform: translateY(20px);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar-menu a {
     text-decoration: none;
-    text-transform: uppercase;
-    color: white;
-    padding: 10px;
-    transition: 0.5s ease;
-}
-
-ul:hover li a {
     color: black;
+    font-weight: bold;
+    transition: color 0.2s ease-in-out;
 }
 
-ul:hover li a:not(:hover) {
+.navbar-menu a:hover {
     color: white;
-    opacity: 0.3;
-    filter: blur(1px);
+}
+
+/* Responsividad */
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar-menu {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        margin-top: 10px;
+        background-color: #1cb963;
+        padding: 10px;
+    }
+
+    .navbar-menu li {
+        margin-right: 0;
+        margin-bottom: 10px;
+        opacity: 1;
+        transform: none;
+    }
 }
