--- a/css/nav.css
+++ b/css/nav.css
@@ -6,7 +6,7 @@ body {
 .navbar {
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */  
+    /* align-items: center; */
     padding: 20px;
     background-color: #5D6D7E;
     transition: background-color 0.3s ease-in-out;
@@ -14,7 +14,7 @@ body {
 
 .logo img {
     width: 50px;
-    height: auto;   
+    height: auto;
     animation: rotateLogo 5s infinite linear;
 }
 
@@ -22,6 +22,7 @@ body {
     0% {
         transform: rotate(0);
     }
+
     100% {
         transform: rotate(360deg);
     }
@@ -85,8 +86,8 @@ body {
     border: 2px solid DodgerBlue;
     height: 30px;
     width: 10%;
-  }
-  
+}
+
 
 h1 {
     color: black;
@@ -97,11 +98,46 @@ h1 {
     overflow: hidden;
     white-space: nowrap;
     animation: borrar-reescribir infinite;
-  }
-  
-  @keyframes borrar-reescribir {
-    0% { width: 100%; }
-    50% { width: 0; }
-    51% { width: 0; }
-    100% { width: 100%; }
-  }
+}
+
+@keyframes borrar-reescribir {
+    0% {
+        width: 100%;
+    }
+
+    50% {
+        width: 0;
+    }
+
+    51% {
+        width: 0;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
+/* Animacion de imagens */
+.slider {
+    position: relative;
+    width: 400px;
+    height: 200px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.slider img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 100%;
+    max-height: 100%;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.slider img.active {
+    opacity: 1;
+}
