--- a/css/footer.css
+++ b/css/footer.css
@@ -1,88 +1,56 @@
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700&family=Yellowtail&display=swap');
-
-* {
-    font-family: "Titillium Web";
-    margin: 0;
-    padding: 0;
-}
-
-
-.contacto {
-    background-color: #202020;
-    padding: 140px 0 100px 0;
-    color: #e6e6e6;
+footer {
+    background-color: #f2f2f2;
+    padding: 20px;
     text-align: center;
 }
 
-.contacto .contenido-seccion {
-    max-width: 1000px;
-    margin: auto;
-    padding: 0 10px;
+.container {
+    max-width: 960px;
+    margin: 0 auto;
 }
 
-.contacto .contenido-seccion h3 {
-    text-transform: uppercase;
-    font-size: 30px;
+.social-icons {
+    margin-bottom: 20px;
 }
 
-.contacto .contenido-seccion .fila {
-    display: flex;
-    justify-content: space-around;
+.icon {
+    display: inline-block;
+    margin-right: 10px;
+    position: relative;
+    overflow: hidden;
 }
 
-.contacto .contenido-seccion .fila .col {
-    margin-top: 50px;
+.icon img {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    transition: transform 0.3s ease;
 }
 
-.contacto .contenido-seccion .fila .col h2 {
-    color: #940253;
+.icon:hover img {
+    transform: rotate(360deg);
 }
 
-/* SECCION RESPONSIVE */
-@media screen and (max-width:800px) {
-    .habilidades .contenido-seccion .fila {
-        display: block;
+.copyright {
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+
+/* Responsive Styles */
+
+@media screen and (max-width: 600px) {
+    .social-icons {
+        margin-bottom: 10px;
     }
 
-    .habilidades .contenido-seccion .fila .col {
-        width: 100%;
-        text-align: center;
+    .icon {
+        margin-right: 5px;
     }
 
-    .habilidades .contenido-seccion .fila .col .cont-barra {
-        justify-content: center;
-    }
-
-    .sobremi .contenido-seccion .fila {
-        display: block;
-    }
-
-    .sobremi .contenido-seccion .fila .col {
-        width: 80%;
-        margin: auto;
-        margin-top: 20px;
-    }
-
-    .resumen .contenido-seccion .info {
-        display: block;
-    }
-
-    .resumen .contenido-seccion .info .col {
-        width: 90%;
-        margin: auto;
-    }
-
-    .resumen .contenido-seccion .info .col .titulo {
-        display: block;
-        text-align: center;
-    }
-
-    .resumen .contenido-seccion .info .col table {
-        margin-top: 10px;
-        margin-bottom: 30px;
-    }
-
-    .contacto .contenido-seccion .fila {
-        display: block;
+    .icon img {
+        width: 20px;
+        height: 20px;
     }
 }
+
