--- a/css/nav.css
+++ b/css/nav.css
@@ -92,15 +92,15 @@ body {
 /* Estilos responsivos */
 @media screen and (max-width: 768px) {
     .welcome {
-      width: 50%;
+        width: 50%;
     }
-  }
-  
-  @media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 480px) {
     .welcome {
-      width: 50%;
+        width: 50%;
     }
-  }
+}
 
 
 h1 {
@@ -154,4 +154,37 @@ h1 {
 
 .slider img.active {
     opacity: 1;
+}
+
+.parraf1 {
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #333;
+    background-color: #f7f7f7;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+}
+
+.parra2 {
+    font-family: Times New Roman, serif;
+    font-size: 18px;
+    line-height: 1.6;
+    color: #555;
+    background-color: #fff;
+    padding: 15px;
+    margin-bottom: 30px;
+    border: 2px solid #ddd;
+}
+
+.parraf3 {
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: 14px;
+    line-height: 1.4;
+    color: #666;
+    background-color: #f2f2f2;
+    padding: 8px;
+    margin-bottom: 15px;
+    border: 1px solid #bbb;
 }
