--- a/css/about.css
+++ b/css/about.css
@@ -106,7 +106,6 @@
 
 .sobremi .contenido-seccion .fila .col i {
     color: #5483B3;
-    ;
     display: inline-block;
     width: 40px;
     height: 40px;
@@ -119,6 +118,14 @@
     display: block;
     font-weight: bold;
     margin: 8px 0;
+    color: #666;
+    font-size: 14px;
+    text-transform: uppercase;
+    text-align: center;
+    background-color: #5483B3;
+}
+
+p {
 }
 
 /* HABILIDADES */
@@ -126,7 +133,7 @@
     padding: 80px 0 100px 0;
     text-align: center;
     background: linear-gradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, .3)),
-        url("../images/habilidades.jpg");
+        url("../images/habilidaddes.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
