--- a/css/nav.css
+++ b/css/nav.css
@@ -86,6 +86,7 @@ body {
     border: 2px solid DodgerBlue;
     height: 30px;
     width: 10%;
+    border-radius: 5px;
 }
 
 /* Estilos responsivos */
