--- a/css/about.css
+++ b/css/about.css
@@ -41,7 +41,6 @@
 
 .foto {
     position: absolute;
-    top: 38%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -55,7 +54,7 @@
 }
 
 @media (max-width: 768px) {
-    .foto {
+    .foto img {
         position: relative;
         top: auto;
         left: auto;
@@ -83,7 +82,7 @@
 }
 
 .sobremi .contenido-seccion .especial {
-    color: #5483B3;
+    color: #08090a;
     font-weight: bold;
     margin-top: 15px;
 }
@@ -91,14 +90,14 @@
 .sobremi .contenido-seccion p {
     max-width: 700px;
     margin: auto;
-    color: #666;
+    color: #08090a;
 }
 
 .sobremi .contenido-seccion .fila {
     display: flex;
     margin-top: 30px;
     justify-content: space-between;
-    /* background-color: #b5c1ce; */
+    border-radius: 10px;
 }
 
 .sobremi .contenido-seccion .fila .col {
@@ -124,7 +123,7 @@
     display: block;
     font-weight: bold;
     margin: 8px 0;
-    color: #666;
+    color: #08090a;
     font-size: 14px;
     text-transform: uppercase;
     text-align: center;
@@ -138,7 +137,7 @@
         url("../images/habilidaddes.jpg");
     background-size: cover;
     background-attachment: fixed;
-    background-position: center center;
+    background-position: center;
     color: #fff;
 }
 
@@ -182,4 +181,27 @@
     width: 20px;
     height: 30px;
     margin-right: 2px;
+}
+
+@media screen and (max-width: 768px) {
+    .habilidades .contenido-seccion .fila {
+        flex-wrap: wrap;
+    }
+
+    .habilidades .contenido-seccion .fila .col {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .habilidades .contenido-seccion h3 {
+        font-size: 24px;
+    }
+
+    .habilidades .contenido-seccion .barra .e {
+        width: 15px;
+        height: 20px;
+        margin-right: 1px;
+    }
 }
