--- a/css/nav.css
+++ b/css/nav.css
@@ -100,37 +100,44 @@ h1 {
 }
 
 .interactive-paragraph {
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     padding: 20px;
     background-color: #f7f7f7;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
     transition: transform 0.3s ease-in-out;
-}
-
-.interactive-paragraph:hover {
+    overflow: hidden;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+  }
+  
+  .interactive-paragraph:hover {
     transform: scale(1.05);
     background-color: #5D6D7E;
-    color: #ffff;
-}
-
-.interactive-paragraph p {
-    font-size: 16px;
+    color: #fff;
+  }
+  
+  .interactive-paragraph p {
+    font-size: 18px;
     line-height: 1.5;
     margin: 0;
-}
-
-.interactive-paragraph .highlight {
+  }
+  
+  .interactive-paragraph .highlight {
     color: black;
     font-weight: bold;
-    font-family:Arial, Helvetica, sans-serif 
-}
-
-
-@media (max-width: 768px) {
+  }
+  
+  @media (max-width: 768px) {
     .interactive-paragraph {
-        padding: 10px;
-        font-size: 14px;
+      padding: 10px;
+      max-width: 400px;
     }
-}
+    
+    .interactive-paragraph p {
+      font-size: 14px;
+    }
+  }
