--- a/css/nav.css
+++ b/css/nav.css
@@ -53,7 +53,7 @@ body {
         align-items: center;
         width: 100%;
         margin-top: 10px;
-        background-color: #1cb963;
+        background-color: #34495E;
     }
 
     .navbar-menu li {
